# applications_settings

./: .gitignore  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  build-profile.json5  build.gradle  build.sh  bundle.json  gradle.properties  gradlew  hvigorfile.js  hvigorfile.ts  hvigorw  hvigorw.bat  local.properties  oh-package-lock.json5  oh-package.json5  ohos.build  package-lock.json  package.json  publicity.xml  rebuildAndInstallPc  replace_hvigorfile.ts  settings.gradle
.hvigor/outputs/logs/details/: details.json
AppScope/: app.json5
AppScope/resources/ar/element/: string.json
AppScope/resources/base/element/: string.json
AppScope/resources/base/profile/: configuration.json
AppScope/resources/bo_CN/element/: string.json
AppScope/resources/es/element/: string.json
AppScope/resources/fr/element/: string.json
AppScope/resources/ko/element/: string.json
AppScope/resources/ru/element/: string.json
AppScope/resources/ug/element/: string.json
AppScope/resources/vi/element/: string.json
AppScope/resources/zh_CN/element/: string.json
ani/intelligentscene/: BUILD.gn  ani_init_module.cpp  ani_nodisturb.cpp  ani_nodisturb.h  intelligentscene_ani.versionscript
ani/intelligentscene/common/: ani_common.h  ani_intelligent_scene_log.h  ani_throw_error.cpp  ani_throw_error.h
ani/intelligentscene/ets/: @ohos.intelligentScene.ets  @ohos.intelligentscene.ets
ani/settings/: BUILD.gn  ani_settings.cpp  ani_settings.h  ani_settings_log.h  ani_settings_observer.cpp  ani_settings_observer.h  settings_ani.versionscript
ani/settings/ets/: @ohos.settings.ets
ani/settings/open_network_settings/: ani_open_network_settings.cpp  ani_open_network_settings.h  api_open_settings_page_util.cpp  api_open_settings_page_util.h
ani/settings/util/: napi_bundle_util.cpp  napi_bundle_util.h  napi_sys_event_util.h
cj/settings/: BUILD.gn
cj/settings/src/: cj_open_network_settings.cpp  cj_open_network_settings.h  cj_settings.cpp  cj_settings.h  cj_settings_log.h  cj_settings_observer.cpp  cj_settings_observer.h  cj_settings_utils.h  settings_ffi.cpp  settings_ffi.h
common/: index.ets  oh-package.json5
common/component/: oh-package.json5  package-lock.json  package.json
common/search/: build.gradle  hvigorfile.js  hvigorfile.ts  oh-package.json5  package-lock.json  package.json
common/settingsBase/: hvigorfile.ts  oh-package.json5  package-lock.json  package.json
common/src/main/: module.json5
common/utils/: build.gradle  hvigorfile.js  hvigorfile.ts  oh-package.json5  package.json
entry/: build.gradle
entry/src/main/: config.json
feature/aboutdevice/: index.ets  oh-package.json5
feature/accessibility/: index.ets  oh-package.json5
feature/appfontsmanage/: build-profile.json5  index.ets  oh-package.json5
feature/application/: index.ets  oh-package.json5
feature/bluetooth/: index.ets  oh-package.json5
feature/capsule/: hvigorfile.js  index.ets  oh-package.json5
feature/cloneapps/: index.ets  oh-package.json5
feature/commonUikit/: index.ets  oh-package.json5
feature/datetime/: index.ets  oh-package.json5
feature/developeroptions/: index.ets  oh-package.json5
feature/display/: index.ets  oh-package.json5
feature/fusionconnectivity/: build-profile.json5  hvigorfile.ts  index.ets  oh-package.json5
feature/language/: hvigorfile.ts  index.ets  oh-package.json5
feature/moreconnection/: hvigorfile.ts  index.ets  oh-package.json5
feature/nearlink/: oh-package.json5
feature/network/: Index.ets  build-profile.json5  oh-package.json5
feature/notDisturb/: index.ets  oh-package.json5
feature/powersave/: build-profile.json5  hvigorfile.ts  index.ets  oh-package.json5
feature/privacy/: .gitignore  index.ets  oh-package.json5
feature/reset/: index.ets  oh-package.json5
feature/search/: Index.ets  build-profile.json5  oh-package.json5
feature/storage/: hvigorfile.js  index.ets  oh-package.json5
feature/suggestion/: Index.ets  oh-package.json5
feature/system/: build-profile.json5  oh-package.json5
feature/systemUpdate/: index.ets  oh-package.json5
feature/theme/: index.ets  oh-package.json5
feature/uikit/: index.ets  oh-package.json5
feature/users/: index.ets  oh-package.json5
feature/vpn/: index.ets  oh-package.json5
feature/wifi/: hvigorfile.js  index.ets  oh-package.json5
gradle/wrapper/: gradle-wrapper.properties
hvigor/: hvigor-config.json5
napi/: BUILD.gn
napi/intelligentscene/: BUILD.gn  napi_nodisturb.cpp  napi_nodisturb.h  native_module.cpp
napi/intelligentscene/common/: common.h  common_utils.cpp  intelligence_inner_errors.cpp  intelligence_inner_errors.h  napi_intelligent_scene_log.h
napi/settings/: BUILD.gn  napi_settings.cpp  napi_settings.h  napi_settings_init.cpp  napi_settings_log.h  napi_settings_observer.cpp  napi_settings_observer.h  native_module.cpp  native_settings.observer.cpp  native_settings_observer.cpp
napi/settings/normal/: settings.cpp  settings.h  settings_log.h
napi/settings/open_network_settings/: napi_open_network_settings.cpp  napi_open_network_settings.h  napi_open_settings_page_util.cpp  napi_open_settings_page_util.h
napi/settings/util/: napi_bundle_util.h  napi_sys_event_util.cpp  napi_sys_event_util.h
native/settings/: BUILD.gn
native/settings/src/: napi_bundle_util.cpp  napi_sys_event_util.cpp
native/settings/src/include/: napi_bundle_util.h  napi_settings_log.h  napi_sys_event_util.h
native_api/: build-profile.json5  index.ets  obfuscation-rules.txt  oh-package.json5
native_api/src/main/: module.json5
native_api/src/main/cpp/: CMakeLists.txt
native_api/src/main/cpp/kernel/: kernel.cpp
native_api/src/main/cpp/types/libnative/: index.d.ts  oh-package.json5
open_source/: Settings_OpenSource.html
product/phone/: build-profile.json5  build.gradle  hvigorfile.js  hvigorfile.ts  obfuscation-rules.txt  oh-package.json5  package-lock.json  package.json
product/wearable/: build.gradle  hvigorfile.ts  oh-package.json5  package-lock.json  package.json
replace_hvigor/: hvigor-config.json5
signature/: settings.p7b
(+2896 files in other folders)
