# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("intelligentscene") {
  include_dirs = [
    "./common",
  ]

  sources = [
    "./native_module.cpp",
    "./napi_nodisturb.cpp",
    "./common/common_utils.cpp",
    "./common/intelligence_inner_errors.cpp",
  ]

  external_deps = [
    "ability_base:zuri",
    "napi:ace_napi",
    "os_account:os_account_innerkits",
    "distributed_notification_service:ans_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
  ]

  relative_install_dir = "module"

  subsystem_name = "applications"
  part_name = "settings"
}