# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("settings") {
  include_dirs = [
    "./open_network_settings",
    "./util",
  ]

  deps= ["../../native/settings:settings_common"]

  sources = [
    "./napi_settings.cpp",
    "./napi_settings_init.cpp",
    "./napi_settings_observer.cpp",
    "./native_module.cpp",
    "./open_network_settings/napi_open_network_settings.cpp",
    "./open_network_settings/napi_open_settings_page_util.cpp",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:data_ability_helper",
    "ability_runtime:dataobs_manager",
    "ability_runtime:napi_base_context",
    "ability_runtime:runtime",
    "ability_runtime:ui_extension",
    "ace_engine:ace_uicontent",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "os_account:os_account_innerkits",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "hisysevent:libhisysevent",
    "samgr:samgr_proxy",
  ]

  relative_install_dir = "module"

  subsystem_name = "applications"
  part_name = "settings"
}
