# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("settings_common_config") {
  visibility = ["*:*"]
  include_dirs = ["//applications/standard/settings/native/settings/src/include"]
}

ohos_shared_library("settings_common") {
  include_dirs = ["src/include"]

  sources = [
    "src/napi_bundle_util.cpp",
    "src/napi_sys_event_util.cpp"
  ]

  public_configs = [":settings_common_config"]

  deps = []

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:ui_extension",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "samgr:samgr_proxy",
  ]

  part_name = "settings"
  subsystem_name = "applications"
}
